# forbaxy-pd-extraction-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agents/: base.py  prescription_agent.py  prompts.py
app/api/: routes.py
app/config/: settings.py
app/core/: container.py  dependencies.py  exceptions.py  logging.py  middleware.py
app/models/: chat.py
app/parsers/: __init__.py  base.py  factory.py  llamaparse_parser.py  mock_parser.py
app/schemas/: chat.py  common.py  documents.py  pd.py  prescription.py  sessions.py
app/services/: chat_service.py  memory.py  privacy.py  production_adapter.py  review_learning.py
app/tools/: base.py  builtin.py  registry.py
app/workflows/: __init__.py  pd_extraction.py
docs/: ARCHITECTURE.md
scripts/: run_dev.ps1
tests/: conftest.py
tests/agents/: test_json_extraction.py  test_learning_context.py  test_prompt_contract.py
tests/api/: test_pd_extract.py  test_routes.py
tests/unit/: test_memory.py  test_production_adapter.py  test_tools.py
tests/workflows/: test_pd_extraction_workflow.py
