[project]
name = "forbaxy-pd-extraction-agent"
version = "0.1.0"
description = "Production-ready FastAPI and LlamaIndex agent for PD-only prescription extraction."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "llama-index-core>=0.12.0",
    "llama-index-llms-openai>=0.3.0",
    "llama-index-llms-openai-like>=0.3.0",
    "llama-cloud>=2.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.uv]
package = false

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "logs*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "T20"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-q"

[tool.llamaagents]
name = "forbaxy-pd-extraction-agent"
env_files = []

[tool.llamaagents.env]
OPENAI_API_BASE = "https://api.groq.com/openai/v1"
MODEL_NAME = "meta-llama/llama-4-scout-17b-16e-instruct"
VISION_MODEL_NAME = ""
ENABLE_VISION_INPUT = "true"
TEMPERATURE = "0.1"
LLM_CONTEXT_WINDOW = "131072"
ENABLE_AGENT_TOOLS = "false"
ENABLE_STRUCTURED_OUTPUT = "false"
PARSER_MODE = "llamaparse"

[tool.llamaagents.workflows]
pd_extraction = "app.workflows.pd_extraction:pd_extraction_workflow"
